build/log/idf_py_stdout_output_489137
[1/13] Building C object esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/esp_board_init.c.obj
FAILED: esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/esp_board_init.c.obj 
/home/tjc/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../components/hardware_driver/include -I../components/hardware_driver/boards/include -I/home/tjc/esp/esp-idf/components/newlib/platform_include -I/home/tjc/esp/esp-idf/components/freertos/config/include -I/home/tjc/esp/esp-idf/components/freertos/config/include/freertos -I/home/tjc/esp/esp-idf/components/freertos/config/xtensa/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/tjc/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/tjc/esp/esp-idf/components/freertos/esp_additions/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/include/soc -I/home/tjc/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_hw_support/dma/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/tjc/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/tjc/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/tjc/esp/esp-idf/components/heap/include -I/home/tjc/esp/esp-idf/components/log/include -I/home/tjc/esp/esp-idf/components/soc/include -I/home/tjc/esp/esp-idf/components/soc/esp32s3 -I/home/tjc/esp/esp-idf/components/soc/esp32s3/include -I/home/tjc/esp/esp-idf/components/hal/platform_port/include -I/home/tjc/esp/esp-idf/components/hal/esp32s3/include -I/home/tjc/esp/esp-idf/components/hal/include -I/home/tjc/esp/esp-idf/components/esp_rom/include -I/home/tjc/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_rom/esp32s3 -I/home/tjc/esp/esp-idf/components/esp_common/include -I/home/tjc/esp/esp-idf/components/esp_system/include -I/home/tjc/esp/esp-idf/components/esp_system/port/soc -I/home/tjc/esp/esp-idf/components/esp_system/port/include/private -I/home/tjc/esp/esp-idf/components/xtensa/esp32s3/include -I/home/tjc/esp/esp-idf/components/xtensa/include -I/home/tjc/esp/esp-idf/components/xtensa/deprecated_include -I/home/tjc/esp/esp-idf/components/lwip/include -I/home/tjc/esp/esp-idf/components/lwip/include/apps -I/home/tjc/esp/esp-idf/components/lwip/include/apps/sntp -I/home/tjc/esp/esp-idf/components/lwip/lwip/src/include -I/home/tjc/esp/esp-idf/components/lwip/port/include -I/home/tjc/esp/esp-idf/components/lwip/port/freertos/include -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/tjc/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/tjc/esp/esp-idf/components/driver/deprecated -I/home/tjc/esp/esp-idf/components/driver/i2c/include -I/home/tjc/esp/esp-idf/components/driver/touch_sensor/include -I/home/tjc/esp/esp-idf/components/driver/twai/include -I/home/tjc/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/tjc/esp/esp-idf/components/esp_pm/include -I/home/tjc/esp/esp-idf/components/esp_ringbuf/include -I/home/tjc/esp/esp-idf/components/esp_driver_gpio/include -I/home/tjc/esp/esp-idf/components/esp_driver_pcnt/include -I/home/tjc/esp/esp-idf/components/esp_driver_gptimer/include -I/home/tjc/esp/esp-idf/components/esp_driver_spi/include -I/home/tjc/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/tjc/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/tjc/esp/esp-idf/components/esp_driver_i2s/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/tjc/esp/esp-idf/components/sdmmc/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdspi/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdio/include -I/home/tjc/esp/esp-idf/components/esp_driver_dac/include -I/home/tjc/esp/esp-idf/components/esp_driver_rmt/include -I/home/tjc/esp/esp-idf/components/esp_driver_tsens/include -I/home/tjc/esp/esp-idf/components/esp_driver_sdm/include -I/home/tjc/esp/esp-idf/components/esp_driver_i2c/include -I/home/tjc/esp/esp-idf/components/esp_driver_uart/include -I/home/tjc/esp/esp-idf/components/vfs/include -I/home/tjc/esp/esp-idf/components/esp_driver_ledc/include -I/home/tjc/esp/esp-idf/components/esp_driver_parlio/include -I/home/tjc/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/tjc/esp/esp-idf/components/fatfs/diskio -I/home/tjc/esp/esp-idf/components/fatfs/src -I/home/tjc/esp/esp-idf/components/fatfs/vfs -I/home/tjc/esp/esp-idf/components/wear_levelling/include -I/home/tjc/esp/esp-idf/components/esp_partition/include -I/home/tjc/esp/esp-idf/components/spiffs/include -I../components/esp_codec_dev/include -I../components/esp_codec_dev/interface -I../components/esp_codec_dev/device/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -Wno-unused-variable -Wno-unused-function -Wno-ignored-qualifiers -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -O2 -fmacro-prefix-map=/home/tjc/esp/develop/esp-ai=. -fmacro-prefix-map=/home/tjc/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -w -Wno-format -MD -MT esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/esp_board_init.c.obj -MF esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/esp_board_init.c.obj.d -o esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/esp_board_init.c.obj   -c ../components/hardware_driver/esp_board_init.c
../components/hardware_driver/esp_board_init.c: In function 'esp_i2s_read':
../components/hardware_driver/esp_board_init.c:25:12: error: void value not ignored as it ought to be
   25 |     return bsp_i2s_read(buffer, buffer_len);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[2/13] Performing build step for 'bootloader'
[1/1] cd /home/tjc/esp/develop/esp-ai/build/bootloader/esp-idf/esptool_py && /home/tjc/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/tjc/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/tjc/esp/develop/esp-ai/build/bootloader/bootloader.bin
Bootloader binary size 0x5810 bytes. 0x27f0 bytes (31%) free.
[3/11] Building C object esp-idf/hardware_driver/CMakeFiles/__idf_hardware_driver.dir/boards/esp32-s3/bsp_board.c.obj
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app/app_sr.c.obj
../main/app/app_sr.c: In function 'audio_feed_task':
../main/app/app_sr.c:89:24: warning: passing argument 1 of 'esp_audio_play' from incompatible pointer type [-Wincompatible-pointer-types]
   89 |         esp_audio_play(audio_buffer,BUFFER_SIZE * I2S_CHANNEL_NUM * sizeof(int32_t));
      |                        ^~~~~~~~~~~~
      |                        |
      |                        int32_t * {aka long int *}
In file included from ../main/app/app_sr.c:25:
../components/hardware_driver/include/esp_board_init.h:12:41: note: expected 'const int16_t *' {aka 'const short int *'} but argument is of type 'int32_t *' {aka 'long int *'}
   12 | esp_err_t esp_audio_play(const int16_t *data, size_t size);
      |                          ~~~~~~~~~~~~~~~^~~~
../main/app/app_sr.c:92:36: warning: passing argument 2 of 'afe_handle->feed' from incompatible pointer type [-Wincompatible-pointer-types]
   92 |         afe_handle->feed(afe_data, audio_buffer);
      |                                    ^~~~~~~~~~~~
      |                                    |
      |                                    int32_t * {aka long int *}
../main/app/app_sr.c:92:36: note: expected 'const int16_t *' {aka 'const short int *'} but argument is of type 'int32_t *' {aka 'long int *'}
[5/11] cd /home/tjc/esp/develop/esp-ai/build/esp-idf/main && /home/tjc/.espressif/python_env/idf5.3_py3.8_env/bin/python /home/tjc/esp/esp-idf/components/spiffs/spiffsgen.py 0x600000 /home/tjc/esp/develop/esp-ai/spiffs /home/tjc/esp/develop/esp-ai/build/storage.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len
ninja: build stopped: subcommand failed.
